<?xml version="1.0"?>
<package format="2">
  <name>robot_msgs</name>
  <version>1.0.0</version>
  <description>
    This message using for ironx robot that connect via serial
  </description>
  <maintainer email="james.ttpts@gmail.com">Thitipong T.</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
