<?xml version="1.0"?>
<package format="2">
  <name>robot_odom</name>
  <version>1.0.0</version>
  <description>
    This package using for Odometry and IMU topic for ironx robot
  </description>
  <maintainer email="james.ttpts@gmail.com">Thitipong T.</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>robot_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
